--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,21 @@
 {
-  "name": "restaurant",
+  "name": "restaurant-backend",
   "version": "1.0.0",
-  "homepage": "https://asmaa691.github.io/Restaurant",
   "private": true,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1"
-  },
+
+  "main": "server.js",
+
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+
   "devDependencies": {
-    "gh-pages": "^6.0.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "nodemon": "^3.0.1"
   }
 }
