--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "restaurant",
-  "version": "1.0.0",
-  "homepage": "https://asmaa691.github.io/Restaurant",
+  "name": "restaurant2-frontend",
+  "version": "0.1.0",
   "private": true,
+  "homepage": "https://asmaa691.github.io/RESTAURANT2",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -16,9 +16,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
   },
   "browserslist": {
     "production": [
