--- a/backend/package.json
+++ b/backend/package.json
@@ -2,20 +2,18 @@
   "name": "restaurant-backend",
   "version": "1.0.0",
   "private": true,
-
   "main": "server.js",
-
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mysql": "^2.18.1"
   },
-
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
+
