--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "mysql": "^2.18.1"
+    "express": "^4.18.2",
+    "mysql2": "^3.6.0"
   },
+
+
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
-
